优化概率模型：使用波动率+距离结算价的模型替代纯TA预测
- 新增 PTB Prob (Price-To-Beat probability)，基于实现波动率估算结算概率
- TA Predict 改为 TA+PTB 的融合概率（以 PTB 为锚，TA 作时间衰减倾斜）
- 添加可调参数：VOL_LOOKBACK_MINUTES、VOL_MIN/MAX_SIGMA_PER_MIN、TA_TILT_ALPHA
- 修复 tasks.json（Windows PowerShell 不支持 && 且仓库无 build/test 脚本）
- 屏幕显示 PTB Prob 方便对比模型/市场隐含概率差异

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,22 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Build and Test Project",
+			"label": "Syntax Check",
 			"type": "shell",
-			"command": "npm run build && npm test",
+			"command": "node --check src/index.js",
 			"args": [],
 			"isBackground": false,
 			"problemMatcher": [],
 			"group": "build"
+		},
+		{
+			"label": "Run Assistant",
+			"type": "shell",
+			"command": "npm start",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "test"
 		}
 	]
 }
